--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
 
 .header {
   position: relative;
-  background-color: rgb(3, 52, 45);
   display: flex;
   align-items: center;
   width: 100%;
@@ -33,7 +32,7 @@ body {
   display: flex;
   align-items: center;
   background-color: rgb(10, 118, 79);
-  width: 40%;
+  width: 30%;
   height: 100%;
   margin-left: 30px;
 }
@@ -73,79 +72,27 @@ body {
   font-weight: 700;
 }
 
-.container {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-}
-
 .title strong {
   color: white;
 }
 
-.items {
-  display: flex;
-  flex-basis: 70%;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 40px 0;
-}
-
-.item {
+/* .item {
   display: flex;
   flex-direction: column;
   height: auto;
   margin: 5px;
   width: 200px;
-  border: 2px solid rgb(234, 234, 233);
+  border: 2px solid #eaeae9;
   border-radius: 5px;
   box-sizing: border-box;
-}
+} */
 
-.item .item__sku {
+.item__sku {
   display: none;
 }
 
-.item .item__title {
-  display: flex;
-  align-items: center;
-  flex-grow: 1;
-  padding: 10px;
-  text-align: center;
-}
-
-.item .item__image {
-  width: 100%;
-}
-
 .item .item__add {
-  background-color: rgb(5, 52, 219);
-  border: 0;
-  cursor: pointer;
-  margin: 0;
-  padding: 10px;
   color: white;
-}
-
-.cart {
-  display: flex;
-  flex-basis: 32%;
-  flex-flow: column wrap;
-  background-color: rgb(241, 241, 238);
-  height: 100vh;
-}
-
-.cart .cart__items {
-  height: 500px;
-  overflow-y: scroll;
-}
-
-.empty-cart {
-  width: 170px;
-  height: 35px;
-  margin: 0 auto;
-  border: 2px solid rgb(5, 52, 219);
-  background-color: rgb(249, 249, 246);
 }
 
 .loading {
