--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ body {
   font-size: 30px;
   padding-left: 30px;
 }
+.loading {
+  color: black;
+  font-size: 20px;
+}
 
 .container-cartTitle {
   position: relative;
