--- a/style.css
+++ b/style.css
@@ -152,3 +152,9 @@ body {
   margin-top: 10px;
   text-align: center;
 }
+
+.loading {
+  padding-top: 40px;
+  font-size: 5rem;
+  text-align: center;
+}
