--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* font-family: 'Source Sans Pro', sans-serif; */
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
 * {
   box-sizing: border-box;
   font-family: Epilogue, sans-serif;
@@ -15,7 +19,8 @@ body {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 60px;
+  height: 100px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .container-title {
@@ -24,7 +29,7 @@ body {
 
 .title {
   color: rgb(221, 221, 221);
-  font-size: 30px;
+  font-size: 3rem;
   padding-left: 30px;
 }
 
@@ -45,10 +50,10 @@ body {
 .container-cartTitle:after {
   content: '';
   position: absolute;
-  top: 15px;
+  top: 20px;
   right: 61.5%;
   width: 39.5%;
-  height: 15px;
+  height: 30px;
   background: rgb(10, 118, 79);
   transform: skew(-45deg);
   z-index: 0;
@@ -57,10 +62,10 @@ body {
 .container-cartTitle:before {
   content: '';
   position: absolute;
-  top: 30px;
+  top: 50px;
   right: 61.5%;
   width: 39.5%;
-  height: 15px;
+  height: 30px;
   background: rgb(10, 118, 79);
   transform: skew(45deg);
   z-index: 0;
@@ -68,9 +73,10 @@ body {
 
 .container-cartTitle .cart__title {
   color: white;
-  font-size: 20px;
-  padding-left: 35px;
+  font-size: 2rem;
+  text-align: center;
   font-weight: 700;
+  width: 100%;
 }
 
 .container {
@@ -95,10 +101,11 @@ body {
   display: flex;
   flex-direction: column;
   height: auto;
-  margin: 5px;
-  width: 200px;
-  border: 2px solid rgb(234, 234, 233);
-  border-radius: 5px;
+  margin: 10px;
+  width: 225px;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  background-color: white;
+  border-radius: 10px;
   box-sizing: border-box;
 }
 
@@ -112,6 +119,7 @@ body {
   flex-grow: 1;
   padding: 10px;
   text-align: center;
+  font-family: Source Sans Pro, sans-serif;
 }
 
 .item .item__image {
@@ -125,6 +133,9 @@ body {
   margin: 0;
   padding: 10px;
   color: white;
+  font-weight: 700;
+  font-size: 1rem;
+  border-radius: 0 0 10px 10px;
 }
 
 .cart {
@@ -137,24 +148,44 @@ body {
 
 .cart .cart__items {
   height: 500px;
+  padding: 15px;
   overflow-y: scroll;
+  list-style: none;
+}
+
+.cart .cart__item {
+  margin-bottom: 10px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .empty-cart {
-  width: 170px;
-  height: 35px;
-  margin: 0 auto;
-  border: 2px solid rgb(5, 52, 219);
-  background-color: rgb(249, 249, 246);
+  cursor: pointer;
+  font-size: 1.1rem;
+  font-weight: 700;
+  width: 190px;
+  height: 55px;
+  margin: 20px auto;
+  margin-bottom: 0;
+  color: white;
+  background-color: rgb(5, 52, 219);
+  border-color: transparent;
+  border-radius: 25px;
+}
+
+.empty-cart:hover , .item__add:hover {
+  background-color: rgb(44, 171, 225);
 }
 
 .total-price-container {
   margin-top: 10px;
   text-align: center;
+  color: rgb(10, 118, 79);
 }
 
 .loading {
   padding-top: 40px;
-  font-size: 5rem;
+  font-size: 7rem;
   text-align: center;
+  font-family: Source Sans Pro, sans-serif;
+  color: rgb(3, 52, 45);
 }
