--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ body {
 
 .item .item__image {
   width: 100%;
+  margin-bottom: 5px;
 }
 
 .item .item__add {
@@ -136,6 +137,15 @@ body {
   font-weight: 700;
   font-size: 1rem;
   border-radius: 0 0 10px 10px;
+}
+
+.item .item__price {
+  text-align: center;
+  font-weight: 700;
+  padding: 5px;
+  width: 100%;
+  color: white;
+  background-color: rgba(10, 118, 78, 0.7);
 }
 
 .cart {
@@ -165,7 +175,6 @@ body {
   width: 190px;
   height: 55px;
   margin: 20px auto;
-  margin-bottom: 0;
   color: white;
   background-color: rgb(5, 52, 219);
   border-color: transparent;
@@ -179,6 +188,8 @@ body {
 .total-price-container {
   margin-top: 10px;
   text-align: center;
+  font-weight: 700;
+  font-size: 1.1rem;
   color: rgb(10, 118, 79);
 }
 
