--- a/style.css
+++ b/style.css
@@ -131,12 +131,13 @@ body {
   display: flex;
   flex-basis: 32%;
   flex-flow: column wrap;
+  justify-content: space-between;
   background-color: rgb(241, 241, 238);
   height: 100vh;
 }
 
 .cart .cart__items {
-  height: 500px;
+  max-height: 500px;
   overflow-y: scroll;
 }
 
@@ -146,4 +147,5 @@ body {
   margin: 0 auto;
   border: 2px solid rgb(5, 52, 219);
   background-color: rgb(249, 249, 246);
+  margin-bottom: 150px;
 }
