Iniciando alterações no css

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 60px;
+  height: 100px;
 }
 
 .container-title {
@@ -95,10 +95,10 @@ body {
   display: flex;
   flex-direction: column;
   height: auto;
-  margin: 5px;
-  width: 200px;
+  margin: 10px;
+  width: 226px;
   border: 2px solid rgb(234, 234, 233);
-  border-radius: 5px;
+  border-radius: 15px;
   box-sizing: border-box;
 }
 
@@ -116,15 +116,19 @@ body {
 
 .item .item__image {
   width: 100%;
+  margin-bottom: 8px;
 }
 
 .item .item__add {
-  background-color: rgb(5, 52, 219);
+  background-color: rgb(9, 52, 45);
   border: 0;
   cursor: pointer;
   margin: 0;
   padding: 10px;
   color: white;
+  font-weight: 700px;
+  font-size: 0.9rem;
+  border-radius: 10px;
 }
 
 .cart {
@@ -135,16 +139,42 @@ body {
   height: 100vh;
 }
 
+.cart .cart__item {
+  cursor: pointer;
+  font-size: 16px;
+  margin-bottom: 15px;
+  border-bottom: 2px solid rgba(186, 47, 47, 0.269);
+  padding: 8px;
+  color: rgb(3, 52, 45);
+}
+
 .cart .cart__items {
   height: 500px;
+  padding: 30px;
+  list-style: none;
   overflow-y: scroll;
+  list-style: none;
 }
 
 .empty-cart {
   width: 170px;
   height: 35px;
   margin: 0 auto;
-  border: 2px solid rgb(5, 52, 219);
-  background-color: rgb(249, 249, 246);
+  border: 2px solid rgb(9, 52, 45);
+  background-color: rgb(24, 50, 1);
+  color: white;
   cursor: pointer;
+}
+
+.empty-cart:hover , .item__add:hover {
+   background-color: rgb(40, 119, 80);
+   cursor: pointer;
+}
+
+.loading {
+  padding-top: 50px;
+  font-size: 2rem;
+  align-items: center;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(142, 8, 8);
 }
