--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: rgb(246, 246, 246);
+  background-color: rgba(131, 231, 176, 0.219);
 }
 
 .header {
@@ -97,7 +97,7 @@ body {
   height: auto;
   margin: 5px;
   width: 200px;
-  border: 2px solid rgb(234, 234, 233);
+  border: 2px solid rgba(0, 0, 0, 0.596);
   border-radius: 5px;
   box-sizing: border-box;
 }
@@ -119,25 +119,29 @@ body {
 }
 
 .item .item__add {
-  background-color: rgb(5, 52, 219);
+  background-color: rgb(5, 219, 137);
   border: 0;
   cursor: pointer;
   margin: 0;
   padding: 10px;
-  color: white;
+  color: black;
 }
 
 .cart {
   display: flex;
   flex-basis: 32%;
   flex-flow: column wrap;
-  background-color: rgb(241, 241, 238);
+  background-color: rgb(212, 212, 211);
   height: 100vh;
 }
 
 .cart .cart__items {
   height: 500px;
   overflow-y: scroll;
+}
+
+.total-price {
+  margin-left: 10px;
 }
 
 .empty-cart {
