--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
   height: auto;
   margin: 5px;
   width: 200px;
-  border: 2px solid rgb(234, 234, 233);
+  border: 2px solid rgb(214, 214, 214);
   border-radius: 5px;
   box-sizing: border-box;
 }
@@ -125,6 +125,7 @@ body {
   margin: 0;
   padding: 10px;
   color: white;
+  border: 2px solid rgb(214, 214, 214);
 }
 
 .cart {
@@ -138,6 +139,12 @@ body {
 .cart .cart__items {
   height: 500px;
   overflow-y: scroll;
+}
+
+.cart__item {
+  padding-bottom: 2px;
+  padding-top: 3px;
+  border-bottom: 1px solid gray;
 }
 
 .empty-cart {
