--- a/style.css
+++ b/style.css
@@ -146,4 +146,6 @@ body {
   margin: 0 auto;
   border: 2px solid rgb(5, 52, 219);
   background-color: rgb(249, 249, 246);
+  cursor: pointer;
 }
+
