--- a/style.css
+++ b/style.css
@@ -140,6 +140,11 @@ body {
   overflow-y: scroll;
 }
 
+.total-price {
+  display: flex;
+  align-self:center;
+}
+
 .empty-cart {
   width: 170px;
   height: 35px;
