projeto finalizado, falta correçoes dos testes

--- a/style.css
+++ b/style.css
@@ -145,6 +145,11 @@ body {
   align-self:center;
 }
 
+.loading {
+  display: flex;
+  position: absolute;
+}
+
 .empty-cart {
   width: 170px;
   height: 35px;
