imagens no carrinho

--- a/style.css
+++ b/style.css
@@ -135,12 +135,30 @@ body {
   height: 100vh;
 }
 
+.cartItem__image {
+  width: 60px;
+}
+
 .cart .cart__items {
   display: flex;
   flex-flow: column;
-  gap: 10px;
+  gap: 5px;
   height: 500px;
   overflow-y: scroll;
+}
+
+.cart__item {
+  background-color: white;
+  display: flex;
+  gap: 5px;
+  border: 2px solid rgb(234, 234, 233);
+  border-radius: 5px;
+}
+
+.total-price {
+  text-align: center;
+  padding: 10px;
+  font-weight: 700;
 }
 
 .empty-cart {
