--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ body {
   height: auto;
   margin: 5px;
   width: 200px;
+  background-color: white;
   border: 2px solid rgb(234, 234, 233);
   border-radius: 5px;
   box-sizing: border-box;
@@ -124,6 +125,7 @@ body {
   cursor: pointer;
   margin: 0;
   padding: 10px;
+  border-radius: 5px;
   color: white;
 }
 
