Adicionando pequenas alterações no CSS

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: Epilogue, sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -11,7 +11,7 @@ body {
 
 .header {
   position: relative;
-  background-color: rgb(3, 52, 45);
+  background-color: rgb(3, 20, 52);
   display: flex;
   align-items: center;
   width: 100%;
@@ -32,7 +32,7 @@ body {
   position: relative;
   display: flex;
   align-items: center;
-  background-color: rgb(10, 118, 79);
+  background-color: rgb(10, 57, 118);
   width: 40%;
   height: 100%;
   margin-left: 30px;
@@ -49,7 +49,7 @@ body {
   right: 61.5%;
   width: 39.5%;
   height: 15px;
-  background: rgb(10, 118, 79);
+  background: rgb(10, 57, 118);
   transform: skew(-45deg);
   z-index: 0;
 }
@@ -61,7 +61,7 @@ body {
   right: 61.5%;
   width: 39.5%;
   height: 15px;
-  background: rgb(10, 118, 79);
+  background: rgb(10, 57, 118);
   transform: skew(45deg);
   z-index: 0;
 }
