--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ body {
 .cart .cart__items {
   height: 500px;
   overflow-y: scroll;
+  padding: 20px 20px 20px 40px;
 }
 
 .empty-cart {
@@ -146,4 +147,8 @@ body {
   margin: 0 auto;
   border: 2px solid rgb(5, 52, 219);
   background-color: rgb(249, 249, 246);
+}
+
+.cart__item {
+  padding: 10px 0;
 }
