--- a/style.css
+++ b/style.css
@@ -119,12 +119,13 @@ body {
 }
 
 .item .item__add {
-  background-color: rgb(5, 52, 219);
+  background-color: rgb(69, 5, 219);
   border: 0;
   cursor: pointer;
   margin: 0;
   padding: 10px;
   color: white;
+  border-radius: 5px;
 }
 
 .cart {
