--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
   height: auto;
   margin: 5px;
   width: 200px;
-  border: 2px solid rgb(234, 234, 233);
+  border: 2px solid rgb(9, 154, 212);
   border-radius: 5px;
   box-sizing: border-box;
 }
@@ -131,7 +131,7 @@ body {
   display: flex;
   flex-basis: 32%;
   flex-flow: column wrap;
-  background-color: rgb(241, 241, 238);
+  background-color: rgb(198, 209, 198);
   height: 100vh;
 }
 
@@ -146,4 +146,10 @@ body {
   margin: 0 auto;
   border: 2px solid rgb(5, 52, 219);
   background-color: rgb(249, 249, 246);
+}
+
+li {
+  color: rgb(1, 3, 1);
+  border: 2px solid rgb(5, 52, 219);
+  margin-top: 5px;
 }
