--- a/style.css
+++ b/style.css
@@ -177,3 +177,9 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: rgb(142, 8, 8);
 }
+
+.total-price {
+  display: flex;
+  margin: 0 auto;
+  padding: 5px;
+}
