--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: rgb(246, 246, 246);
+  background-color: rgb(113, 199, 55);
 }
 
 .header {
@@ -131,7 +131,7 @@ body {
   display: flex;
   flex-basis: 32%;
   flex-flow: column wrap;
-  background-color: rgb(198, 209, 198);
+  background-color: rgb(237, 243, 237);
   height: 100vh;
 }
 
@@ -149,7 +149,29 @@ body {
 }
 
 li {
+  background-color: rgb(102, 186, 219);
   color: rgb(1, 3, 1);
-  border: 2px solid rgb(5, 52, 219);
-  margin-top: 5px;
+  border: 1px solid rgb(165, 176, 219);
+  margin-top: 2px;
+}
+
+.cart__total {
+  text-align: justify;
+  font-family: Epilogue, sans-serif;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+}
+
+.total-price {
+  text-align: center;
+  background-color: rgb(46, 235, 29);
+  color: rgb(5, 52, 219);
+  font-size: 20px;
+  font-weight: 700;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  border: 1px solid rgb(5, 52, 219);
 }
