--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ body {
 }
 
 .price-container {
-  background-color: rgb(220, 220, 220);
+  background-color: gainsboro;
   padding-top: 5px;
   padding-bottom: 5px;
 }
