--- a/style.css
+++ b/style.css
@@ -140,6 +140,21 @@ body {
   overflow-y: scroll;
 }
 
+.cart__item {
+  margin: 25px;
+}
+
+.total {
+  text-align: center;
+}
+
+.total-price {
+  text-align: center;
+  margin: 15px;
+  padding: 15px;
+  background-color: rgba(202, 203, 205, 0.609);
+}
+
 .empty-cart {
   width: 170px;
   height: 35px;
