--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
   height: auto;
   margin: 5px;
   width: 200px;
-  border: 2px solid rgb(234, 234, 233);
+  border: 2px solid rgb(222, 222, 216);
   border-radius: 5px;
   box-sizing: border-box;
 }
@@ -116,22 +116,24 @@ body {
 
 .item .item__image {
   width: 100%;
+  border-radius: 10px;
 }
 
 .item .item__add {
   background-color: rgb(5, 52, 219);
-  border: 0;
+  border: 1;
   cursor: pointer;
-  margin: 0;
+  margin: 9px;
   padding: 10px;
-  color: white;
+  color: rgb(255, 255, 255);
+  border-radius: 5px;
 }
 
 .cart {
   display: flex;
   flex-basis: 32%;
   flex-flow: column wrap;
-  background-color: rgb(241, 241, 238);
+  background-color: rgb(238, 238, 233);
   height: 100vh;
 }
 
@@ -144,6 +146,8 @@ body {
   width: 170px;
   height: 35px;
   margin: 0 auto;
-  border: 2px solid rgb(5, 52, 219);
-  background-color: rgb(249, 249, 246);
+  border: 2px solid rgb(137, 176, 159);
+  background-color: rgb(0, 133, 80);
+  color: white;
+  border-radius: 5px;
 }
