--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ body {
   cursor: pointer;
   margin: 9px;
   padding: 10px;
-  color: rgb(255, 255, 255);
+  color: white;
   border-radius: 5px;
 }
 
@@ -146,7 +146,7 @@ body {
   width: 170px;
   height: 35px;
   margin: 0 auto;
-  border: 2px solid rgb(137, 176, 159);
+  border: 1;
   background-color: rgb(0, 133, 80);
   color: white;
   border-radius: 5px;
