--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: rgb(246, 246, 246);
+  background-color: rgb(255, 253, 253);
 }
 
 .header {
@@ -97,7 +97,7 @@ body {
   height: auto;
   margin: 10px;
   width: 226px;
-  border: 2px solid rgb(234, 234, 233);
+  border: 2px solid rgb(9, 52, 45);
   border-radius: 15px;
   box-sizing: border-box;
 }
@@ -112,6 +112,8 @@ body {
   flex-grow: 1;
   padding: 10px;
   text-align: center;
+  font-size: 15px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .item .item__image {
@@ -119,6 +121,10 @@ body {
   margin-bottom: 8px;
 }
 
+.item:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
 .item .item__add {
   background-color: rgb(9, 52, 45);
   border: 0;
