--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ body {
   padding: 10px;
   text-align: center;
   font-size: 15px;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: sans-serif;
 }
 
 .item .item__image {
@@ -122,9 +122,10 @@ body {
 }
 
 .item:hover {
-    cursor: pointer;
-    transform: scale(1.1);
+  cursor: pointer;
+  transform: scale(1.1);
 }
+
 .item .item__add {
   background-color: rgb(9, 52, 45);
   border: 0;
