--- a/style.css
+++ b/style.css
@@ -148,3 +148,8 @@ body {
   border: 2px solid rgb(5, 52, 219);
   background-color: rgb(249, 249, 246);
 }
+
+.loading {
+  display: flex;
+  position: absolute;
+}
