--- a/style.css
+++ b/style.css
@@ -133,10 +133,11 @@ body {
   flex-flow: column wrap;
   background-color: rgb(241, 241, 238);
   height: 100vh;
+  padding: 10px
 }
 
 .cart .cart__items {
-  height: 400px;
+  height: 500px;
   overflow-y: scroll;
 }
 
@@ -150,4 +151,5 @@ body {
 
 .price-div {
   display: flex;
+  margin: 10px;
 }
