--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .header {
   position: relative;
-  background-color: #414066;
+  background-color: rgb(65, 64, 102);
   display: flex;
   align-items: center;
   width: 100%;
@@ -28,14 +28,14 @@ body {
   color: white;
   font-size: 30px;
   padding-left: 30px;
-  font-family: 'Righteous', cursive;
+  font-family: Righteous, cursive;
 }
 
 .container-cartTitle {
   position: relative;
   display: flex;
   align-items: center;
-  background-color: #414066;
+  background-color: rgb(65, 64, 102);
   width: 40%;
   height: 100%;
   margin-left: 30px;
@@ -74,7 +74,7 @@ body {
   font-size: 20px;
   padding-left: 35px;
   font-weight: 700;
-  font-family: 'Nunito', sans-serif;
+  font-family: Nunito, sans-serif;
 }
 
 .container {
@@ -100,7 +100,7 @@ body {
   border: 2px solid rgb(234, 234, 233);
   border-radius: 5px;
   box-sizing: border-box;
-  background-color: #DDDCD2;
+  background-color: #dddcd2;
   color: black;
 }
 
@@ -115,7 +115,7 @@ body {
   padding: 10px;
   text-align: justify;
   word-spacing: -2px;
-  font-family: 'Nunito', sans-serif;
+  font-family: Nunito, sans-serif;
 }
 
 .item .item__image {
@@ -123,26 +123,26 @@ body {
 }
 
 .item .item__add {
-  background-color: #5F0A8C;
+  background-color: #5f0a8c;
   border: 0;
   cursor: pointer;
   margin: 0;
   padding: 10px;
   color: white;
   border-radius: 1rem;
-  font-family: 'Nunito', sans-serif;
+  font-family: Nunito, sans-serif;
 }
 
 .cart {
   display: flex;
   flex-basis: 32%;
   flex-flow: column wrap;
-  background-color: #DDDCD2;
+  background-color: #dddcd2;
   height: 100vh;
 }
 
 .cart__item {
-  font-family: 'Nunito', sans-serif;
+  font-family: Nunito, sans-serif;
   margin: 30px;
 }
 
@@ -157,12 +157,12 @@ body {
   height: 35px;
   margin: 0 auto;
   border: 2px solid #414066;
-  background-color: #5F0A8C;
+  background-color: #5f0a8c;
   border-radius: 1rem;
-  font-family: 'Nunito', sans-serif;
+  font-family: Nunito, sans-serif;
 }
 
 .total-price {
-  font-family: 'Nunito', sans-serif;
+  font-family: Nunito, sans-serif;
   margin-left: 20px;
 }
