--- a/style.css
+++ b/style.css
@@ -162,3 +162,9 @@ body {
   border: 2px solid rgb(5, 52, 219);
   background-color: rgb(249, 249, 246);
 }
+
+.total-price {
+  padding: 7px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
