--- a/style.css
+++ b/style.css
@@ -147,3 +147,8 @@ body {
   border: 2px solid rgb(5, 52, 219);
   background-color: rgb(249, 249, 246);
 }
+
+li {
+  list-style: none;
+  margin: 20px;
+}
